src/test/ui/const-generics/type-after-const-ok.min.stderr
error: type parameters must be declared prior to const parameters
  --> $DIR/type-after-const-ok.rs:9:26
   |
LL | struct A<const N: usize, T>(T);
   |         -----------------^- help: reorder the parameters: lifetimes, then types, then consts: `<T, const N: usize>`

error: aborting due to previous error

